<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/contactsFragment"
            android:icon="@drawable/ic_outline_contacts_24"
            android:title="@string/contacts" />
        <item
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/calls" />
        <item
            android:icon="@drawable/ic_outline_settings_24"
            android:title="@string/settings" />
    </group>
</menu>