...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chatsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".chats.ChatsFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
...
