<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/chatsFragment">

    <fragment
        android:id="@+id/authFragment"
        android:name="com.zancheema.android.telegram.auth.AuthFragment"
        android:label="auth_fragment"
        tools:layout="@layout/auth_fragment" >
...
        tools:layout="@layout/chats_fragment" >
        <action
            android:id="@+id/action_chatsFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.zancheema.android.telegram.register.RegisterFragment"
        android:label="register_fragment"
        tools:layout="@layout/register_fragment" >
        <argument
            android:name="phoneNumber"
            app:argType="string" />
...
